fix: compile using unexported package